grammar.js
    program: ($) => repeat($.top_decl),

    top_decl: ($) =>
      choice(
        $.type_def_decl,
        $.enum_type_def_decl,
        $.event_decl,
        $.event_set_decl,
        $.interface_decl,
        $.impl_machine_decl,
        $.spec_machine_decl,
        $.fun_decl,
        $.pure_decl,
        $.named_module_decl,
        $.test_decl,
        $.implementation_decl,
        $.global_param_decl,
        $.invariant_decl,
        $.invariant_group_decl,
        $.axiom_decl,
        $.assume_on_start_decl,
        $.proof_block_decl
      ),

    // -------------------------------------------------------------------------
    // Identifiers and literals
    // -------------------------------------------------------------------------

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    int_literal: (_) => /[0-9]+/,

    bool_literal: (_) => choice("true", "false"),

    string_literal: (_) => /"([^"\\]|\\.)*"/,

    // -------------------------------------------------------------------------
    // Types
    // -------------------------------------------------------------------------

    type: ($) =>
      choice(
        $.seq_type,
        $.set_type,
        $.map_type,
        $.tuple_type,
        $.named_tuple_type,
        $.primitive_type,
        $.named_type
      ),

    primitive_type: (_) =>
      choice("bool", "int", "float", "string", "event", "machine", "data", "any"),

    event_set_literal: ($) =>
      seq($.non_default_event, repeat(seq(",", $.non_default_event))),

    // INTERFACE foo(type) receives ... ;
    impl_machine_decl: ($) =>
      seq(
        "machine",
        field("name", $.identifier),
        repeat($.receives_sends),
        $.machine_body
      ),

    receives_sends: ($) =>
      choice(
        seq("receives", optional($.event_set_literal), ";"),
        seq("sends", optional($.event_set_literal), ";")
      ),

    // SPEC foo observes eventSet machineBody
    spec_machine_decl: ($) =>
      seq(
        "spec",
        field("name", $.identifier),
        "observes",
        $.event_set_literal,
        $.machine_body
      ),

    machine_body: ($) => seq("{", repeat($.machine_entry), "}"),
    machine_entry: ($) => choice($.var_decl, $.fun_decl, $.state_decl),

    var_decl: ($) => seq("var", $.iden_list, ":", $.type, ";"),

    iden_list: ($) =>
      seq($.identifier, repeat(seq(",", $.identifier))),

    // FUN declarations (3 alternatives)
    fun_decl: ($) =>
      choice($.foreign_fun_decl, $.p_fun_decl),

    // FUN foo(...) : type SEMI  (foreign)
    // FUN foo(...) : type CREATES iden SEMI  (foreign)
    // FUN foo(...) (RETURN (...))? requires* ensures* SEMI  (foreign with contracts)
    p_fun_decl: ($) =>
      seq(
        "fun",
        field("name", $.identifier),
        "(",
        optional($.fun_param_list),
        ")",
        optional(seq(":", $.type)),
        $.function_body
      ),

    // PURE foo(...) : type (= expr)? ;
    invariant_decl: ($) =>
      seq("invariant", field("name", $.identifier), ":", field("body", $.expr), ";"),

    // LEMMA/THEOREM foo { invariant* }
    invariant_group_decl: ($) =>
      seq(
        choice(token(prec(1, "Lemma")), token(prec(1, "Theorem"))),
        field("name", $.identifier),
        "{",
        repeat($.invariant_decl),
        "}"
      ),

    // AXIOM expr ;
    axiom_decl: ($) => seq("axiom", field("body", $.expr), ";"),

    // init-condition expr ;
    assume_on_start_decl: ($) =>
      seq("init-condition", field("body", $.expr), ";"),

    // PROOF (name)? { proofBody }
    proof_block_decl: ($) =>
      seq(
        token(prec(1, "Proof")),
        optional(field("name", $.identifier)),
        "{",
        optional($.proof_body),
        "}"
      ),

    proof_body: ($) => repeat1($.proof_item),

    proof_item: ($) =>
      seq(
        "prove",
        choice(
          seq($.expr, repeat(seq(",", $.expr))),
          field("goals_all", "*"),
          field("goals_default", "default")
        ),
        optional(
          seq(
            "using",
            choice(
              seq($.expr, repeat(seq(",", $.expr))),
              "*"
            )
          )
        ),
        optional(
          seq("except", $.expr, repeat(seq(",", $.expr)))
        ),
        ";"
      ),

    // PARAM idenList : type ;
    state_decl: ($) =>
      seq(
        optional("start"),
        optional(field("temperature", choice("hot", "cold"))),
        "state",
        field("name", $.identifier),
        "{",
        repeat($.state_body_item),
        "}"
      ),

    state_body_item: ($) =>
      choice(
        $.state_entry,
        $.state_exit,
        $.state_defer,
        $.state_ignore,
        $.on_event_do_action,
        $.on_event_goto_state
      ),

    state_entry: ($) =>
      seq(
        "entry",
        choice(
          $.anon_event_handler,
          seq(field("fun_name", $.identifier), ";")
        )
      ),

    non_default_event_list: ($) =>
      seq($.non_default_event, repeat(seq(",", $.non_default_event))),

    non_default_event: ($) => choice("halt", $.identifier),

    event_list: ($) => seq($.event_id, repeat(seq(",", $.event_id))),

    event_id: ($) => choice($.null_literal, "halt", $.identifier),

    state_name: ($) => field("state", $.identifier),

    // -------------------------------------------------------------------------
    // Function bodies and statements
    // -------------------------------------------------------------------------

    function_body: ($) => seq("{", repeat($.var_decl), repeat($.statement), "}"),

    statement: ($) =>
      choice(
        $.compound_stmt,
        $.assert_stmt,
        $.assume_stmt,
        $.print_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.assign_stmt,
        $.insert_stmt,
        $.add_stmt,
        $.remove_stmt,
        $.while_stmt,
        $.foreach_stmt,
        $.if_stmt,
        $.ctor_stmt,
        $.fun_call_stmt,
        $.raise_stmt,
        $.send_stmt,
        $.announce_stmt,
        $.goto_stmt,
        $.receive_stmt,
        $.no_stmt
      ),

    compound_stmt: ($) => seq("{", repeat($.statement), "}"),

    assert_stmt: ($) =>
      seq("assert", field("assertion", $.expr), optional(seq(",", field("message", $.expr))), ";"),

    assume_stmt: ($) =>
      seq("assume", field("assumption", $.expr), optional(seq(",", field("message", $.expr))), ";"),

    print_stmt: ($) => seq("print", field("message", $.expr), ";"),

    return_stmt: ($) => seq("return", optional($.expr), ";"),

    break_stmt: (_) => seq("break", ";"),

    continue_stmt: (_) => seq("continue", ";"),

    assign_stmt: ($) => seq($.lvalue, "=", $.rvalue, ";"),

    insert_stmt: ($) =>
      seq($.lvalue, "+=", "(", $.expr, ",", $.rvalue, ")", ";"),

    add_stmt: ($) => seq($.lvalue, "+=", "(", $.rvalue, ")", ";"),

    remove_stmt: ($) => seq($.lvalue, "-=", $.expr, ";"),

    while_stmt: ($) => seq("while", "(", $.expr, ")", $.statement),

    foreach_stmt: ($) =>
      seq(
        "foreach",
        "(",
        field("item", $.identifier),
        "in",
        field("collection", $.expr),
        ")",
        repeat(seq("invariant", $.expr, ";")),
        $.statement
      ),

    if_stmt: ($) =>
      prec.right(seq(
        "if",
        "(",
        $.expr,
        ")",
        field("then_branch", $.statement),
        optional(seq("else", field("else_branch", $.statement)))
      )),

    ctor_stmt: ($) =>
      seq("new", $.identifier, "(", optional($.rvalue_list), ")", ";"),

    fun_call_stmt: ($) =>
      seq(field("fun", $.identifier), "(", optional($.rvalue_list), ")", ";"),

    raise_stmt: ($) =>
      seq("raise", $.expr, optional(seq(",", $.rvalue_list)), ";"),

    send_stmt: ($) =>
      seq(
        "send",
        field("machine", $.expr),
        ",",
        field("event", $.expr),
        optional(seq(",", $.rvalue_list)),
        ";"
      ),

    announce_stmt: ($) =>
      seq("announce", $.expr, optional(seq(",", $.rvalue_list)), ";"),

    goto_stmt: ($) =>
      seq("goto", $.state_name, optional(seq(",", $.rvalue_list)), ";"),

    receive_stmt: ($) =>
      seq("receive", "{", repeat1($.recv_case), "}"),

    no_stmt: (_) => ";",

    // -------------------------------------------------------------------------
    // Lvalues
    // -------------------------------------------------------------------------

    lvalue: ($) =>
      choice(
        $.var_lvalue,
        $.named_tuple_lvalue,
        $.tuple_lvalue,
        $.map_or_seq_lvalue
      ),

    var_lvalue: ($) => field("name", $.identifier),

    named_tuple_lvalue: ($) =>
      seq($.lvalue, ".", field("field", $.identifier)),

    tuple_lvalue: ($) =>
      seq($.lvalue, ".", field("field", $.int_literal)),

    map_or_seq_lvalue: ($) =>
      seq($.lvalue, "[", $.expr, "]"),

    // -------------------------------------------------------------------------
    // Event handlers
    // -------------------------------------------------------------------------

    recv_case: ($) =>
      seq("case", $.event_list, ":", $.anon_event_handler),

    anon_event_handler: ($) =>
      seq(optional(seq("(", $.fun_param, ")")), $.function_body),

    expr: ($) =>
      choice(
        $.primitive_expr,
        $.unnamed_tuple_expr,
        $.named_tuple_expr,
        $.paren_expr,
        $.named_tuple_access_expr,
        $.tuple_access_expr,
        $.test_expr,
        $.targets_expr,
        $.flying_expr,
        $.sent_expr,
        $.seq_access_expr,
        $.keyword_expr,
        $.ctor_expr,
        $.fun_call_expr,
        $.unary_expr,
        $.bin_expr,
        $.cast_expr,
        $.quant_expr,
        $.choose_expr,
        $.string_expr
      ),

    primitive_expr: ($) => $._primitive,

    bin_expr: ($) =>
      choice(
        prec.left(9, seq(field("lhs", $.expr), field("op", choice("*", "/", "%")), field("rhs", $.expr))),
        prec.left(8, seq(field("lhs", $.expr), field("op", choice("+", "-")), field("rhs", $.expr))),
        prec.left(6, seq(field("lhs", $.expr), field("op", choice("<", ">", ">=", "<=", "in")), field("rhs", $.expr))),
        prec.left(5, seq(field("lhs", $.expr), field("op", choice("==", "!=")), field("rhs", $.expr))),
        prec.left(4, seq(field("lhs", $.expr), field("op", "&&"), field("rhs", $.expr))),
        prec.left(3, seq(field("lhs", $.expr), field("op", "||"), field("rhs", $.expr))),
        prec.left(2, seq(field("lhs", $.expr), field("op", "==>"), field("rhs", $.expr))),
        prec.left(1, seq(field("lhs", $.expr), field("op", "<==>"), field("rhs", $.expr)))
      ),

    string_expr: ($) => $.formatted_string,

    formatted_string: ($) =>
      choice(
        $.string_literal,
        seq("format", "(", $.string_literal, optional(seq(",", $.rvalue_list)), ")")
      ),

    _primitive: ($) =>
      choice(
        $.identifier,
        $.float_literal,
        $.bool_literal,
        $.int_literal,
        $.null_literal,
        token(prec(1, "$$")),
        "$",
        "halt",
        "this"
      ),

    rvalue_list: ($) => seq($.rvalue, repeat(seq(",", $.rvalue))),
    rvalue: ($) => $.expr,

    // -------------------------------------------------------------------------
    // Module system
    // -------------------------------------------------------------------------

    named_module_decl: ($) =>
      seq("module", field("name", $.identifier), "=", $.mod_expr, ";"),

    mod_expr: ($) =>
      choice(
        $.paren_module_expr,
        $.primitive_module_expr,
        $.named_module,
        $.compose_module_expr,
        $.union_module_expr,
        $.hide_events_module_expr,
        $.hide_interfaces_module_expr,
        $.assert_module_expr,
        $.rename_module_expr,
        $.main_machine_module_expr
      ),

    primitive_module_expr: ($) =>
      seq("{", $.bind_expr, repeat(seq(",", $.bind_expr)), "}"),

    named_module: ($) => $.identifier,

    compose_module_expr: ($) =>
      prec.left(seq("compose", $.mod_expr, repeat1(seq(",", $.mod_expr)))),

    union_module_expr: ($) =>
      prec.left(seq("union", $.mod_expr, repeat1(seq(",", $.mod_expr)))),

    hide_events_module_expr: ($) =>
      seq("hidee", $.non_default_event_list, "in", $.mod_expr),

    hide_interfaces_module_expr: ($) =>
      seq("hidei", $.iden_list, "in", $.mod_expr),

    rename_module_expr: ($) =>
      seq("rename", field("old_name", $.identifier), "to", field("new_name", $.identifier), "in", $.mod_expr),

    main_machine_module_expr: ($) =>
      seq("main", field("main_machine", $.identifier), "in", $.mod_expr),

    bind_expr: ($) =>
      seq(field("m_name", $.identifier), optional(seq("->", field("i_name", $.identifier)))),

    // TEST declarations
